--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,10 @@
           <p>こんにちは、モーダルテキストです</p>
         </div>
         <button id="modal-button" class="button">hello</button>
+        <p>
+          <input type="checkbox" id="not-ask-me-again" class="not-ask-me-again">
+          <label for="not-ask-me-again">再度表示しない</label>
+        </p>
       </div>
     </div>
     <script src="modal.js"></script>
