--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 
     <div id="modal" class="modal">
       <div class="modal-body">
-        <div id="modal-close" class="close-button">x</div>
+        <div id="modal-close" class="close-button"></div>
         <div class="modal-text">
           <p>こんにちは、モーダルテキストです</p>
         </div>
